--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   "homepage": "https://github.com/ll-dev-team/theworkflow#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "dateformat": "^2.0.0",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "fluent-ffmpeg": "^2.1.2",
-    "mongodb": "^2.2.30"
+    "moment": "^2.18.1",
+    "mongodb": "^2.2.30",
+    "request": "^2.81.0"
   }
 }
