--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./bin/www"
   },
   "repository": {
 "type": "git",
